@@ -28,18 +28,18 @@ urlpatterns = patterns('',
 )
 
 urlpatterns += patterns('pulog.views',
-        (r'^$', 'index'),
-        (r'^archives/$', 'index'),
-        (r'^archives/(?P<post_id>\d+).html$', 'single_post'),
-        (r'^archives/category/(?P<slugname>[^/]+)/$', 'category_view'),
-        (r'^archives/category/(?P<slugname>[^/]+)/page/(?P<page_num>\d+)/$', 
-            'category_view'),
-        (r'^archives/(?P<year>\d{4})/(?P<month>\d{1,2})/$', 'archive_view'),
-        (r'^archives/(?P<year>\d{4})/(?P<month>[^/]+)/page/(?P<page_num>\d+)/$',
-            'archive_view'),
-        (r'^page/(?P<num>\d+)/$', 'page'),
-        (r'^(\w+)/$', 'static_pages'),
-#        (r'^(?P<year>\d{4})/(?P<month>\d{1,2})/page/(?P<page_num>\d+)$', 'archive_view'),
+    (r'^$', 'index'),
+    (r'^archives/$', 'index'),
+    url(r'^archives/(?P<post_id>\d+).html$', 'single_post', name = 'post-single'),
+    url(r'^archives/category/(?P<slugname>[^/]+)/$', 'category_view', name = 'post-category'),
+    (r'^archives/category/(?P<slugname>[^/]+)/page/(?P<page_num>\d+)/$', 
+        'category_view'),
+    (r'^archives/(?P<year>\d{4})/(?P<month>\d{1,2})/$', 'archive_view'),
+    (r'^archives/(?P<year>\d{4})/(?P<month>[^/]+)/page/(?P<page_num>\d+)/$',
+        'archive_view'),
+    (r'^page/(?P<num>\d+)/$', 'page'),
+    (r'^(\w+)/$', 'static_pages'),
+#   (r'^(?P<year>\d{4})/(?P<month>\d{1,2})/page/(?P<page_num>\d+)$', 'archive_view'),
 )
 
 urlpatterns += patterns('pulog.views',
@@ -52,8 +52,4 @@ urlpatterns += patterns('pulog.views',
     url(r'^comment/moderate/$',      'moderation.moderation_queue', name='comment-moderation-queue'),
     url(r'^comment/approve/(\d+)/$', 'moderation.approve',          name='comment-approve'),
     url(r'^comment/approved/$',      'moderation.approve_done',     name='comment-approve-done'),
-)
-
-urlpatterns += patterns('',
-    url(r'^comment/cr/(\d+)/(\w+)/$', 'django.views.defaults.shortcut', name='comment-url-redirect'),
 )
